# sdl2-game

./: CMakeLists.txt  conanfile.py
.ci/: build-android.py  build-ios.py  build-native.py
.github/workflows/: main.yml
android/: settings.gradle
android/app/: .gitignore  build.gradle
android/app/src/androidTest/java/com/android/sdl2_game/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/android/sdl2_game/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/android/sdl2_game/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
profiles/android/: arm64-v8a  armeabi-v7a  x86  x86_64
profiles/ios/: emulator  iPhone11
src/: main.cpp
tools/: launch-ios-device.sh
xcode/: plist.in
xcode/storyboards/: LaunchScreen.storyboard
